force-app/main/default/objects/AI_Processing_Status__c/fields/AI_Provider__c.field-meta.xml
<CustomField>
    <fullName>AI_Provider__c</fullName>
    <label>AI Provider</label>
    <type>Text</type>
    <length>80</length>
</CustomField>