force-app/main/default/objects/AI_Processing_Status__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>AI Processing Statuses</relationshipLabel>
    <relationshipName>AI_Processing_Statuses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>