force-app/main/default/objects/AI_Processing_Status__c/fields/Error_Message__c.field-meta.xml
<CustomField>
  <fullName>Error_Message__c</fullName>
  <label>Error Message</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>