force-app/main/default/objects/AI_Processing_Status__c/fields/Metadata__c.field-meta.xml
<CustomField>
  <fullName>Metadata__c</fullName>
  <label>Metadata</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>