force-app/main/default/objects/AI_Processing_Status__c/fields/Processing_Time__c.field-meta.xml
<CustomField>
  <fullName>Processing_Time__c</fullName>
  <label>Processing Time</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>0</scale>
</CustomField>