force-app/main/default/objects/AI_Processing_Status__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>