force-app/main/default/objects/AI_Processing_Status__c/fields/Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Time__c</fullName>
    <label>Request_Time_</label>
    <type>DateTime</type>

</CustomField>