force-app/main/default/objects/AI_Processing_Status__c/fields/Response_Data__c.field-meta.xml
<CustomField>
  <fullName>Response_Data__c</fullName>
  <label>Response Data</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>