force-app/main/default/objects/AI_Processing_Status__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <label>Response_Time_</label>
    <type>DateTime</type>

</CustomField>