force-app/main/default/objects/AI_Processing_Status__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <label>Success_</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>