force-app/main/default/objects/AI_Processing_Status__c/fields/Webhook_Received__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Received__c</fullName>
    <label>Webhook_Received_</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>